--- a/css/ex4.css
+++ b/css/ex4.css
@@ -1,5 +1,19 @@
 .box-full {
-    background-color: aqua;
     text-align: center;
-    text-align: justify;
+    letter-spacing: 5px;
+    position: fixed;
+    
+}
+.kmin {
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+.logo {
+    border-radius: 50%;
+}
+#grad1 {
+    width: 100vw;
+    height: 100vh;
+    background-color: #fcbf16;
+    background-image: linear-gradient(to right, #fcbf16, #992154);
 }
